--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app>
 	<head>
 		<meta charset="utf-8"/>
 		<title>{% if page.title %} {{ page.title }} {% endif %} - Main website name</title>
@@ -23,7 +23,9 @@
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
-		<link rel="shortcut icon" href="ico/favicon.png">	    
+		<link rel="shortcut icon" href="ico/favicon.png">
+		
+		<script src="http://code.angularjs.org/1.0.6/angular.min.js"></script>
 	</head>
 	<body>
 	<!-- Header
@@ -39,7 +41,10 @@
 	{{ content }}
 
 	<footer role="contentinfo">
-
+		<div>
+			<input ng-model="name">
+			<p>Hello {{name}}!</p>
+		</div>
 	</footer>
 
 	<!-- Footer
