--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 
 	<footer role="contentinfo">
 		<div ng-controller="BackendController">
-			<input ng-model="name"><button ng-click="resolve(name)">Resolve</button>
+			<input ng-model="name"><button ng-click="resolve()">Resolve</button>
 			<p ng-init="reset()">[[name]]: [[ans]]</p>
 		</div>
 	</footer>
