--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,30 +3,18 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>{% if page.title %} {{ page.title }} {% endif %} - Main website name</title>
+		
 		<!-- For responsive site
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<link rel="author" href="humans.txt">
 		<meta name="description" content="Description Goes Here">
+		
 		<link rel="stylesheet" href="css/style.css">
-		<!--[if IE 7]>
-			<html class="ie7"> 
-			<link rel="stylesheet" type="text/css" href="/css/font-awesome-ie7.min.css">
-		<![endif]-->
-		<!--[if IE 8]><html class="ie8"> <![endif]-->		
-	    <!--[if lt IE 9]>
-	      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	    <![endif]-->
-
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
 		<link rel="shortcut icon" href="ico/favicon.png">
 		
-		<script src="http://code.angularjs.org/1.0.6/angular.min.js"></script>
-		
+		<script src="http://code.angularjs.org/1.0.6/angular.min.js"></script>		
 		<script>
 			var myApp = angular.module('myApp', [], function($interpolateProvider) {
 				console.log('changing the delimiters');
@@ -65,28 +53,20 @@
 
 	{{ content }}
 
-	<footer role="contentinfo">
-		<div ng-controller="BackendController">
-			<input ng-model="name"><button ng-click="resolve()">Resolve</button>
-			<p ng-init="reset()">[[name]]: [[ans]]</p>
-		</div>
-	</footer>
-
 	<!-- Footer
 	    ================================================== -->
 
+	<footer role="contentinfo">
+		<div ng-controller="BackendController">
+			<input ng-model="name"><button ng-click="resolve()">Resolve</button>
+			<p ng-init="reset()">[[ans]]</p>
+		</div>
+	</footer>
+
 	<!-- Javascripts 
 	    ================================================= -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<script>if (!window.jQuery) {document.write('<script src="/js/jquery.min.js"><\/script>');}</script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	<script src="js/custom.js"></script>
-	<script>
-		window.jQuery(document).ready(function(){
-			window.jQuery.getJSON("http://test1-backend.herokuapp.com/data.json", function(data){
-				console.log(data);
-				});
-			});
-	</script>
 
     <!-- Analytics
     ================================================== -->
